syntax = "proto3";

option go_package = "github.com/sonm-io/core/proto;sonm";

package sonm;

// BigInt represents multi-precision value stored as a big integer.
message BigInt {
    bool neg = 1;
    bytes abs = 2;
}
